@@ -3,10 +3,10 @@ BEGIN;
 SET client_min_messages = warning;
 
 CREATE TABLE :"registry".releases (
-    version         REAL        PRIMARY KEY,
-    installed_at    TIMESTAMPTZ NOT NULL DEFAULT clock_timestamp(),
-    installer_name  TEXT        NOT NULL,
-    installer_email TEXT        NOT NULL
+    version         REAL                 PRIMARY KEY,
+    installed_at    TIMESTAMPTZ          NOT NULL DEFAULT clock_timestamp(),
+    installer_name  TEXT COLLATE "POSIX" NOT NULL,
+    installer_email TEXT COLLATE "POSIX" NOT NULL
 ):tableopts;
 
 COMMENT ON TABLE  :"registry".releases                 IS 'Sqitch registry releases.';
@@ -16,7 +16,7 @@ COMMENT ON COLUMN :"registry".releases.installer_name  IS 'Name of the user who 
 COMMENT ON COLUMN :"registry".releases.installer_email IS 'Email address of the user who installed the registry release.';
 
 -- Add the script_hash column to the changes table. Copy change_id for now.
-ALTER TABLE :"registry".changes ADD COLUMN script_hash TEXT NULL UNIQUE;
+ALTER TABLE :"registry".changes ADD COLUMN script_hash TEXT COLLATE "POSIX" NULL UNIQUE;
 UPDATE :"registry".changes SET script_hash = change_id;
 COMMENT ON COLUMN :"registry".changes.script_hash IS 'Deploy script SHA-1 hash.';
 
