@@ -6,10 +6,10 @@ CREATE SCHEMA IF NOT EXISTS :"registry";
 COMMENT ON SCHEMA :"registry" IS 'Sqitch database deployment metadata v1.0.';
 
 CREATE TABLE :"registry".releases (
-    version         REAL        PRIMARY KEY,
-    installed_at    TIMESTAMPTZ NOT NULL DEFAULT clock_timestamp(),
-    installer_name  TEXT        NOT NULL,
-    installer_email TEXT        NOT NULL
+    version         REAL                 PRIMARY KEY,
+    installed_at    TIMESTAMPTZ          NOT NULL DEFAULT clock_timestamp(),
+    installer_name  TEXT COLLATE "POSIX" NOT NULL,
+    installer_email TEXT COLLATE "POSIX" NOT NULL
 ):tableopts;
 
 COMMENT ON TABLE  :"registry".releases                 IS 'Sqitch registry releases.';
@@ -19,11 +19,11 @@ COMMENT ON COLUMN :"registry".releases.installer_name  IS 'Name of the user who 
 COMMENT ON COLUMN :"registry".releases.installer_email IS 'Email address of the user who installed the registry release.';
 
 CREATE TABLE :"registry".projects (
-    project         TEXT        PRIMARY KEY,
-    uri             TEXT            NULL UNIQUE,
-    created_at      TIMESTAMPTZ NOT NULL DEFAULT clock_timestamp(),
-    creator_name    TEXT        NOT NULL,
-    creator_email   TEXT        NOT NULL
+    project         TEXT COLLATE "POSIX" PRIMARY KEY,
+    uri             TEXT COLLATE "POSIX" NULL UNIQUE,
+    created_at      TIMESTAMPTZ          NOT NULL DEFAULT clock_timestamp(),
+    creator_name    TEXT COLLATE "POSIX" NOT NULL,
+    creator_email   TEXT COLLATE "POSIX" NOT NULL
 ):tableopts;
 
 COMMENT ON TABLE  :"registry".projects                IS 'Sqitch projects deployed to this database.';
@@ -34,16 +34,16 @@ COMMENT ON COLUMN :"registry".projects.creator_name   IS 'Name of the user who a
 COMMENT ON COLUMN :"registry".projects.creator_email  IS 'Email address of the user who added the project.';
 
 CREATE TABLE :"registry".changes (
-    change_id       TEXT        PRIMARY KEY,
-    change          TEXT        NOT NULL,
-    project         TEXT        NOT NULL REFERENCES :"registry".projects(project) ON UPDATE CASCADE,
-    note            TEXT        NOT NULL DEFAULT '',
-    committed_at    TIMESTAMPTZ NOT NULL DEFAULT clock_timestamp(),
-    committer_name  TEXT        NOT NULL,
-    committer_email TEXT        NOT NULL,
-    planned_at      TIMESTAMPTZ NOT NULL,
-    planner_name    TEXT        NOT NULL,
-    planner_email   TEXT        NOT NULL
+    change_id       TEXT COLLATE "POSIX" PRIMARY KEY,
+    change          TEXT COLLATE "POSIX" NOT NULL,
+    project         TEXT COLLATE "POSIX" NOT NULL REFERENCES :"registry".projects(project) ON UPDATE CASCADE,
+    note            TEXT COLLATE "POSIX" NOT NULL DEFAULT '',
+    committed_at    TIMESTAMPTZ          NOT NULL DEFAULT clock_timestamp(),
+    committer_name  TEXT COLLATE "POSIX" NOT NULL,
+    committer_email TEXT COLLATE "POSIX" NOT NULL,
+    planned_at      TIMESTAMPTZ          NOT NULL,
+    planner_name    TEXT COLLATE "POSIX" NOT NULL,
+    planner_email   TEXT COLLATE "POSIX" NOT NULL
 ):tableopts;
 
 COMMENT ON TABLE  :"registry".changes                 IS 'Tracks the changes currently deployed to the database.';
@@ -59,17 +59,17 @@ COMMENT ON COLUMN :"registry".changes.planner_name    IS 'Name of the user who p
 COMMENT ON COLUMN :"registry".changes.planner_email   IS 'Email address of the user who planned the change.';
 
 CREATE TABLE :"registry".tags (
-    tag_id          TEXT        PRIMARY KEY,
-    tag             TEXT        NOT NULL,
-    project         TEXT        NOT NULL REFERENCES :"registry".projects(project) ON UPDATE CASCADE,
-    change_id       TEXT        NOT NULL REFERENCES :"registry".changes(change_id) ON UPDATE CASCADE,
-    note            TEXT        NOT NULL DEFAULT '',
-    committed_at    TIMESTAMPTZ NOT NULL DEFAULT clock_timestamp(),
-    committer_name  TEXT        NOT NULL,
-    committer_email TEXT        NOT NULL,
-    planned_at      TIMESTAMPTZ NOT NULL,
-    planner_name    TEXT        NOT NULL,
-    planner_email   TEXT        NOT NULL,
+    tag_id          TEXT COLLATE "POSIX" PRIMARY KEY,
+    tag             TEXT COLLATE "POSIX" NOT NULL,
+    project         TEXT COLLATE "POSIX" NOT NULL REFERENCES :"registry".projects(project) ON UPDATE CASCADE,
+    change_id       TEXT COLLATE "POSIX" NOT NULL REFERENCES :"registry".changes(change_id) ON UPDATE CASCADE,
+    note            TEXT COLLATE "POSIX" NOT NULL DEFAULT '',
+    committed_at    TIMESTAMPTZ          NOT NULL DEFAULT clock_timestamp(),
+    committer_name  TEXT COLLATE "POSIX" NOT NULL,
+    committer_email TEXT COLLATE "POSIX" NOT NULL,
+    planned_at      TIMESTAMPTZ          NOT NULL,
+    planner_name    TEXT COLLATE "POSIX" NOT NULL,
+    planner_email   TEXT COLLATE "POSIX" NOT NULL,
     UNIQUE(project, tag)
 ):tableopts;
 
@@ -87,10 +87,10 @@ COMMENT ON COLUMN :"registry".tags.planner_name    IS 'Name of the user who plan
 COMMENT ON COLUMN :"registry".tags.planner_email   IS 'Email address of the user who planned the tag.';
 
 CREATE TABLE :"registry".dependencies (
-    change_id       TEXT        NOT NULL REFERENCES :"registry".changes(change_id) ON UPDATE CASCADE ON DELETE CASCADE,
-    type            TEXT        NOT NULL,
-    dependency      TEXT        NOT NULL,
-    dependency_id   TEXT            NULL REFERENCES :"registry".changes(change_id) ON UPDATE CASCADE CHECK (
+    change_id       TEXT COLLATE "POSIX" NOT NULL REFERENCES :"registry".changes(change_id) ON UPDATE CASCADE ON DELETE CASCADE,
+    type            TEXT COLLATE "POSIX" NOT NULL,
+    dependency      TEXT COLLATE "POSIX" NOT NULL,
+    dependency_id   TEXT COLLATE "POSIX"     NULL REFERENCES :"registry".changes(change_id) ON UPDATE CASCADE CHECK (
             (type = 'require'  AND dependency_id IS NOT NULL)
          OR (type = 'conflict' AND dependency_id IS NULL)
     ),
@@ -104,20 +104,20 @@ COMMENT ON COLUMN :"registry".dependencies.dependency    IS 'Dependency name.';
 COMMENT ON COLUMN :"registry".dependencies.dependency_id IS 'Change ID the dependency resolves to.';
 
 CREATE TABLE :"registry".events (
-    event           TEXT        NOT NULL CHECK (event IN ('deploy', 'revert', 'fail')),
-    change_id       TEXT        NOT NULL,
-    change          TEXT        NOT NULL,
-    project         TEXT        NOT NULL REFERENCES :"registry".projects(project) ON UPDATE CASCADE,
-    note            TEXT        NOT NULL DEFAULT '',
-    requires        TEXT[]      NOT NULL DEFAULT '{}',
-    conflicts       TEXT[]      NOT NULL DEFAULT '{}',
-    tags            TEXT[]      NOT NULL DEFAULT '{}',
-    committed_at    TIMESTAMPTZ NOT NULL DEFAULT clock_timestamp(),
-    committer_name  TEXT        NOT NULL,
-    committer_email TEXT        NOT NULL,
-    planned_at      TIMESTAMPTZ NOT NULL,
-    planner_name    TEXT        NOT NULL,
-    planner_email   TEXT        NOT NULL,
+    event           TEXT   COLLATE "POSIX" NOT NULL CHECK (event IN ('deploy', 'revert', 'fail')),
+    change_id       TEXT   COLLATE "POSIX" NOT NULL,
+    change          TEXT   COLLATE "POSIX" NOT NULL,
+    project         TEXT   COLLATE "POSIX" NOT NULL REFERENCES :"registry".projects(project) ON UPDATE CASCADE,
+    note            TEXT   COLLATE "POSIX" NOT NULL DEFAULT '',
+    requires        TEXT[] COLLATE "POSIX" NOT NULL DEFAULT '{}',
+    conflicts       TEXT[] COLLATE "POSIX" NOT NULL DEFAULT '{}',
+    tags            TEXT[] COLLATE "POSIX" NOT NULL DEFAULT '{}',
+    committed_at    TIMESTAMPTZ            NOT NULL DEFAULT clock_timestamp(),
+    committer_name  TEXT   COLLATE "POSIX" NOT NULL,
+    committer_email TEXT   COLLATE "POSIX" NOT NULL,
+    planned_at      TIMESTAMPTZ            NOT NULL,
+    planner_name    TEXT   COLLATE "POSIX" NOT NULL,
+    planner_email   TEXT   COLLATE "POSIX" NOT NULL,
     PRIMARY KEY (change_id, committed_at)
 ):tableopts;
 
