@@ -437,13 +437,45 @@ RUNREG: {
         '--file' => $tmp_fh,
         '--set'  => "tableopts= DISTRIBUTE BY REPLICATION",
     ]], 'Shoud have deployed the temp SQL file';
-    is_deeply \@sra_args, [], 'Still hould not have have called selectrow_array';
+    is_deeply \@sra_args, [], 'Still should not have have called selectrow_array';
     is_deeply \@done, [['SET search_path = ?', undef, $registry]],
         'The registry should have been added to the search path again';
 
     # Make sure the file was changed to remove SCHEMA IF NOT EXISTS.
     file_contents_like $tmp_fh, qr/\QCREATE SCHEMA :"registry";/,
         'Should have removed IF NOT EXISTS from CREATE SCHEMA';
+
+    # Make sure we havne't removed collation.
+    file_contents_like $tmp_fh, qr/\QCOLLATE "POSIX"/,
+        'Should not have removed QCOLLATE "POSIX"';
+
+    # Reset and try Postgres 9.0 server
+    @probed = @ran = @done = ();
+    @prob_ret = (90000, 1);
+    $tmp_fh = undef;
+    $ENV{FOO} = 1;
+    ok $pg->_run_registry_file($ddl), 'Run the registry file again';
+    delete $ENV{FOO};
+    is_deeply \@probed, [
+        ['-c', 'SHOW server_version_num'],
+        ['-c', $xc_query],
+    ], 'Should have again fetched the server version & checked for XC';
+    isnt $tmp_fh, undef, 'Should again have a temp file handle';
+    is_deeply \@ran, [[
+        '--file' => $tmp_fh,
+        '--set'  => "tableopts= DISTRIBUTE BY REPLICATION",
+    ]], 'Shoud have again deployed the temp SQL file';
+    is_deeply \@sra_args, [], 'Again should not have have called selectrow_array';
+    is_deeply \@done, [['SET search_path = ?', undef, $registry]],
+        'The registry again should have been added to the search path';
+
+    # Make sure the file was changed to remove SCHEMA IF NOT EXISTS.
+    file_contents_unlike $tmp_fh, qr/\QCREATE SCHEMA IF NOT EXISTS/,
+        'Should have removed IF NOT EXISTS from CREATE SCHEMA';
+
+    # Make sure the file was changed to remove COLLATE "POSIX".
+    file_contents_unlike $tmp_fh, qr/\QCOLLATE "POSIX"/,
+        'Should have removed COLLATE "POSIX"';
 
     # Reset and try with Server 11 and psql 8.x.
     @probed = @ran = @done = ();
